fix: improve UI layout